src/main/java/com/example/spo_task2/parser/BNFParser.java
// Generated from C:/Users/dange/YandexDisk/�����/3 ����/SystemProgramObespechenie/SPO_task2/src/main/java/com/example/spo_task2/BNF.g4 by ANTLR 4.13.1
package com.example.spo_task2.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BNFParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBER=1, NACHALO=2, KONETS=3, PERVOE=4, VTOROE=5, KONETS_SLAG=6, ZAP=7, 
		DIGIT=8, DVOE=9, RAVNO=10, MINUS=11, PLUS=12, UMNOZH=13, DELIT=14, AND=15, 
		OR=16, NOT=17, LETTER=18, SIN=19, COS=20, TG=21, WS=22;
	public static final int
		RULE_language = 0, RULE_plenty = 1, RULE_slag = 2, RULE_oper = 3, RULE_rightPart = 4, 
		RULE_part1 = 5, RULE_part2 = 6, RULE_part3 = 7, RULE_part4 = 8, RULE_perem = 9, 
		RULE_func = 10, RULE_expression = 11, RULE_numb = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"language", "plenty", "slag", "oper", "rightPart", "part1", "part2", 
			"part3", "part4", "perem", "func", "expression", "numb"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'\\u041D\\u0430\\u0447\\u0430\\u043B\\u043E'", "'\\u041A\\u043E\\u043D\\u0435\\u0446'", 
			"'\\u041F\\u0435\\u0440\\u0432\\u043E\\u0435'", "'\\u0412\\u0442\\u043E\\u0440\\u043E\\u0435'", 
			"'\\u041A\\u043E\\u043D\\u0435\\u0446 \\u0441\\u043B\\u0430\\u0433\\u0430\\u0435\\u043C\\u043E\\u0433\\u043E'", 
			"','", null, "':'", "'='", "'-'", "'+'", "'*'", "'/'", "'&'", "'||'", 
			"'\\u043D\\u0435'", null, "'sin'", "'cos'", "'tg'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMBER", "NACHALO", "KONETS", "PERVOE", "VTOROE", "KONETS_SLAG", 
			"ZAP", "DIGIT", "DVOE", "RAVNO", "MINUS", "PLUS", "UMNOZH", "DELIT", 
			"AND", "OR", "NOT", "LETTER", "SIN", "COS", "TG", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BNF.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BNFParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LanguageContext extends ParserRuleContext {
		public TerminalNode NACHALO() { return getToken(BNFParser.NACHALO, 0); }
		public TerminalNode KONETS() { return getToken(BNFParser.KONETS, 0); }
		public TerminalNode EOF() { return getToken(BNFParser.EOF, 0); }
		public List<PlentyContext> plenty() {
			return getRuleContexts(PlentyContext.class);
		}
		public PlentyContext plenty(int i) {
			return getRuleContext(PlentyContext.class,i);
		}
		public List<SlagContext> slag() {
			return getRuleContexts(SlagContext.class);
		}
		public SlagContext slag(int i) {
			return getRuleContext(SlagContext.class,i);
		}
		public List<OperContext> oper() {
			return getRuleContexts(OperContext.class);
		}
		public OperContext oper(int i) {
			return getRuleContext(OperContext.class,i);
		}
		public LanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_language; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterLanguage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitLanguage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitLanguage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LanguageContext language() throws RecognitionException {
		LanguageContext _localctx = new LanguageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_language);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(NACHALO);
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERVOE || _la==VTOROE) {
				{
				{
				setState(27);
				plenty();
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(33);
					slag();
					}
					} 
				}
				setState(38);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER || _la==LETTER) {
				{
				{
				setState(39);
				oper();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(KONETS);
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlentyContext extends ParserRuleContext {
		public TerminalNode PERVOE() { return getToken(BNFParser.PERVOE, 0); }
		public List<PeremContext> perem() {
			return getRuleContexts(PeremContext.class);
		}
		public PeremContext perem(int i) {
			return getRuleContext(PeremContext.class,i);
		}
		public List<TerminalNode> ZAP() { return getTokens(BNFParser.ZAP); }
		public TerminalNode ZAP(int i) {
			return getToken(BNFParser.ZAP, i);
		}
		public TerminalNode VTOROE() { return getToken(BNFParser.VTOROE, 0); }
		public List<NumbContext> numb() {
			return getRuleContexts(NumbContext.class);
		}
		public NumbContext numb(int i) {
			return getRuleContext(NumbContext.class,i);
		}
		public PlentyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plenty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterPlenty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitPlenty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitPlenty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlentyContext plenty() throws RecognitionException {
		PlentyContext _localctx = new PlentyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_plenty);
		int _la;
		try {
			int _alt;
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PERVOE:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(48);
				match(PERVOE);
				setState(49);
				perem();
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ZAP) {
					{
					{
					setState(50);
					match(ZAP);
					setState(51);
					perem();
					}
					}
					setState(56);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case VTOROE:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(57);
				match(VTOROE);
				setState(59); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(58);
						numb();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(61); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SlagContext extends ParserRuleContext {
		public List<NumbContext> numb() {
			return getRuleContexts(NumbContext.class);
		}
		public NumbContext numb(int i) {
			return getRuleContext(NumbContext.class,i);
		}
		public TerminalNode KONETS_SLAG() { return getToken(BNFParser.KONETS_SLAG, 0); }
		public List<TerminalNode> ZAP() { return getTokens(BNFParser.ZAP); }
		public TerminalNode ZAP(int i) {
			return getToken(BNFParser.ZAP, i);
		}
		public SlagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_slag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterSlag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitSlag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitSlag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SlagContext slag() throws RecognitionException {
		SlagContext _localctx = new SlagContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_slag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			numb();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ZAP) {
				{
				{
				setState(66);
				match(ZAP);
				setState(67);
				numb();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(KONETS_SLAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperContext extends ParserRuleContext {
		public PeremContext perem() {
			return getRuleContext(PeremContext.class,0);
		}
		public TerminalNode RAVNO() { return getToken(BNFParser.RAVNO, 0); }
		public RightPartContext rightPart() {
			return getRuleContext(RightPartContext.class,0);
		}
		public NumbContext numb() {
			return getRuleContext(NumbContext.class,0);
		}
		public TerminalNode DVOE() { return getToken(BNFParser.DVOE, 0); }
		public OperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterOper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitOper(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperContext oper() throws RecognitionException {
		OperContext _localctx = new OperContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_oper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMBER) {
				{
				setState(75);
				numb();
				setState(76);
				match(DVOE);
				}
			}

			setState(80);
			perem();
			setState(81);
			match(RAVNO);
			setState(82);
			rightPart();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RightPartContext extends ParserRuleContext {
		public List<Part1Context> part1() {
			return getRuleContexts(Part1Context.class);
		}
		public Part1Context part1(int i) {
			return getRuleContext(Part1Context.class,i);
		}
		public List<TerminalNode> MINUS() { return getTokens(BNFParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(BNFParser.MINUS, i);
		}
		public List<TerminalNode> PLUS() { return getTokens(BNFParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(BNFParser.PLUS, i);
		}
		public RightPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterRightPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitRightPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitRightPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RightPartContext rightPart() throws RecognitionException {
		RightPartContext _localctx = new RightPartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rightPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS || _la==PLUS) {
				{
				setState(84);
				_la = _input.LA(1);
				if ( !(_la==MINUS || _la==PLUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(87);
			part1();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MINUS || _la==PLUS) {
				{
				{
				setState(88);
				_la = _input.LA(1);
				if ( !(_la==MINUS || _la==PLUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(89);
				part1();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Part1Context extends ParserRuleContext {
		public List<Part2Context> part2() {
			return getRuleContexts(Part2Context.class);
		}
		public Part2Context part2(int i) {
			return getRuleContext(Part2Context.class,i);
		}
		public List<TerminalNode> UMNOZH() { return getTokens(BNFParser.UMNOZH); }
		public TerminalNode UMNOZH(int i) {
			return getToken(BNFParser.UMNOZH, i);
		}
		public List<TerminalNode> DELIT() { return getTokens(BNFParser.DELIT); }
		public TerminalNode DELIT(int i) {
			return getToken(BNFParser.DELIT, i);
		}
		public Part1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterPart1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitPart1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitPart1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Part1Context part1() throws RecognitionException {
		Part1Context _localctx = new Part1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_part1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			part2();
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UMNOZH || _la==DELIT) {
				{
				{
				setState(96);
				_la = _input.LA(1);
				if ( !(_la==UMNOZH || _la==DELIT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(97);
				part2();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Part2Context extends ParserRuleContext {
		public List<Part3Context> part3() {
			return getRuleContexts(Part3Context.class);
		}
		public Part3Context part3(int i) {
			return getRuleContext(Part3Context.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(BNFParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(BNFParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(BNFParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(BNFParser.OR, i);
		}
		public Part2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterPart2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitPart2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitPart2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Part2Context part2() throws RecognitionException {
		Part2Context _localctx = new Part2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_part2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			part3();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				setState(104);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(105);
				part3();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Part3Context extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(BNFParser.NOT, 0); }
		public List<Part4Context> part4() {
			return getRuleContexts(Part4Context.class);
		}
		public Part4Context part4(int i) {
			return getRuleContext(Part4Context.class,i);
		}
		public Part3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterPart3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitPart3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitPart3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Part3Context part3() throws RecognitionException {
		Part3Context _localctx = new Part3Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_part3);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(111);
				match(NOT);
				}
			}

			setState(115); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(114);
					part4();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(117); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Part4Context extends ParserRuleContext {
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public NumbContext numb() {
			return getRuleContext(NumbContext.class,0);
		}
		public PeremContext perem() {
			return getRuleContext(PeremContext.class,0);
		}
		public Part4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterPart4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitPart4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitPart4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Part4Context part4() throws RecognitionException {
		Part4Context _localctx = new Part4Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_part4);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SIN:
			case COS:
			case TG:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				func();
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				numb();
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				perem();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PeremContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(BNFParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(BNFParser.LETTER, i);
		}
		public List<NumbContext> numb() {
			return getRuleContexts(NumbContext.class);
		}
		public NumbContext numb(int i) {
			return getRuleContext(NumbContext.class,i);
		}
		public PeremContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_perem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterPerem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitPerem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitPerem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PeremContext perem() throws RecognitionException {
		PeremContext _localctx = new PeremContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_perem);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(LETTER);
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(127); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						setState(127);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case LETTER:
							{
							setState(125);
							match(LETTER);
							}
							break;
						case NUMBER:
							{
							setState(126);
							numb();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(129); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SIN() { return getToken(BNFParser.SIN, 0); }
		public TerminalNode COS() { return getToken(BNFParser.COS, 0); }
		public TerminalNode TG() { return getToken(BNFParser.TG, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3670016L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(134);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public NumbContext numb() {
			return getRuleContext(NumbContext.class,0);
		}
		public PeremContext perem() {
			return getRuleContext(PeremContext.class,0);
		}
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BNFListener ) ((BNFListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BNFVisitor ) return ((BNFVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}
